[gd_scene load_steps=10 format=2]

[ext_resource path="res://Hotkey_Assignment_Listener.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HotkeyPopups.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.501961, 0.560784, 0.694118, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.137255, 0.109804, 0.0823529, 1 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.186776, 0.178757, 0.214844, 1 )

[node name="HotkeyPopups" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -424.0
margin_bottom = -220.0
script = ExtResource( 3 )

[node name="SettingsDialog" type="WindowDialog" parent="."]
visible = true
margin_right = 500.0
margin_bottom = 300.0
window_title = "Hotkey Settings"

[node name="MarginContainer" type="MarginContainer" parent="SettingsDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsDialog/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 480.0
margin_bottom = 280.0
custom_styles/bg = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsDialog/MarginContainer/ScrollContainer"]
margin_right = 460.0
margin_bottom = 86.0
size_flags_horizontal = 3

[node name="ColumnTitles" type="PanelContainer" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/ColumnTitles"]
margin_right = 460.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/ColumnTitles/HBoxContainer"]
margin_right = 146.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Hotkey"
align = 1

[node name="Label2" type="Label" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/ColumnTitles/HBoxContainer"]
margin_left = 156.0
margin_right = 303.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Keys"
align = 1

[node name="ColorRect" type="ColorRect" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/ColumnTitles/HBoxContainer"]
margin_left = 313.0
margin_right = 460.0
margin_bottom = 22.0
size_flags_horizontal = 3
color = Color( 0, 0, 0, 1 )

[node name="Hotkey_PlayPause" type="PanelContainer" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 460.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/Hotkey_PlayPause"]
margin_right = 460.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="HotkeyName" type="Label" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/Hotkey_PlayPause/HBoxContainer"]
margin_top = 3.0
margin_right = 142.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Play / Pause"
align = 1

[node name="VSeparator" type="VSeparator" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/Hotkey_PlayPause/HBoxContainer"]
margin_left = 152.0
margin_right = 156.0
margin_bottom = 28.0

[node name="KeyList" type="Label" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/Hotkey_PlayPause/HBoxContainer"]
margin_left = 166.0
margin_top = 6.0
margin_right = 308.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
align = 1

[node name="Button" type="Button" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/Hotkey_PlayPause/HBoxContainer"]
margin_left = 318.0
margin_right = 460.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Set Hotkey"

[node name="Hotkey_Stop" type="PanelContainer" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 460.0
margin_bottom = 86.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/Hotkey_Stop"]
margin_right = 460.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="HotkeyName" type="Label" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/Hotkey_Stop/HBoxContainer"]
margin_top = 3.0
margin_right = 142.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Stop"
align = 1

[node name="VSeparator" type="VSeparator" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/Hotkey_Stop/HBoxContainer"]
margin_left = 152.0
margin_right = 156.0
margin_bottom = 28.0

[node name="KeyList" type="Label" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/Hotkey_Stop/HBoxContainer"]
margin_left = 166.0
margin_top = 6.0
margin_right = 308.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
align = 1

[node name="Button" type="Button" parent="SettingsDialog/MarginContainer/ScrollContainer/VBoxContainer/Hotkey_Stop/HBoxContainer"]
margin_left = 318.0
margin_right = 460.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Set Hotkey"

[node name="KeyInputDialog" type="PopupDialog" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 200 )

[node name="MarginContainer" type="MarginContainer" parent="KeyInputDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="KeyInputDialog/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 195.0

[node name="VBoxContainer" type="VBoxContainer" parent="KeyInputDialog/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 273.0
margin_bottom = 178.0

[node name="Label" type="Label" parent="KeyInputDialog/MarginContainer/PanelContainer/VBoxContainer"]
margin_right = 266.0
margin_bottom = 14.0
text = "Enter Key Combination"
align = 1

[node name="InputKeys" type="Label" parent="KeyInputDialog/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 266.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 125 )
custom_styles/normal = SubResource( 5 )
align = 1
valign = 1

[node name="Buttons" type="HBoxContainer" parent="KeyInputDialog/MarginContainer/PanelContainer/VBoxContainer"]
margin_left = 85.0
margin_top = 147.0
margin_right = 180.0
margin_bottom = 167.0
size_flags_horizontal = 4
custom_constants/separation = 10

[node name="OK" type="Button" parent="KeyInputDialog/MarginContainer/PanelContainer/VBoxContainer/Buttons"]
margin_right = 31.0
margin_bottom = 20.0
text = "OK"

[node name="Cancel" type="Button" parent="KeyInputDialog/MarginContainer/PanelContainer/VBoxContainer/Buttons"]
margin_left = 41.0
margin_right = 95.0
margin_bottom = 20.0
text = "Cancel"

[node name="Hotkey_Assignment_Listener" type="Node" parent="."]
script = ExtResource( 1 )

[connection signal="pressed" from="KeyInputDialog/MarginContainer/PanelContainer/VBoxContainer/Buttons/OK" to="." method="_on_EnterKeys_OK_pressed"]
[connection signal="pressed" from="KeyInputDialog/MarginContainer/PanelContainer/VBoxContainer/Buttons/Cancel" to="." method="_on_EnterKeys_Cancel_pressed"]
